# MixtureEM

./: LICENSE  README.md  pyproject.toml
examples/: example.ipynb  example_custom_distribution.ipynb
src/MixtureEM/: MixtureEM.py  __init__.py
tests/: test_MixtureEM.py
