[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MixtureEM"
version = "0.1.0"
authors = [
  { name="Aurelio Amerio", email="aurelio.amerio@ific.uv.es" }
]
description = "Code for a the optimisation of a generic mixture model using the EM algorithm i ntensorflow."
dependencies = [
"numpy",
"tensorflow",
"tensorflow-probability",
"tqdm",
"matplotlib"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/aurelio-amerio/MixtureEM"
"Bug Tracker" = "https://github.com/aurelio-amerio/MixtureEM/issues"
